# nsys-llm-explainer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  capture_nsys_a100.sbatch  pyproject.toml
.github/workflows/: ci.yml
examples/a100_vllm/: metadata.txt  report.json  report.md
examples/a100_vllm/tables/: gpu_idle_gaps.csv  kernels.csv  kernels_by_pid.csv  nvtx_by_pid.csv  nvtx_ranges.csv  sync_by_pid.csv
src/nsys_llm_explainer/: __init__.py  cli.py  heuristics.py  queries.py  report.py  schema.py
tests/: test_synthetic_sqlite.py
